Fixed schedule overflow scrolling + fix start.sh

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -23,7 +23,7 @@ body {
 */
 
 div.scrollBox {
-    overflow: scroll;
+    overflow: auto;
 }
 
 .class-item {
